# audioflask

./: app.py  pyproject.toml
static/: my-spectrum-chart.js  my-waveform-chart.js  myanalyze.js  myhigh.js  myinit.js  myspectrum.js  mywaveform.js
